moved docs, added release notes for ui web 4.1.0

--- a/_posts/2024-12-04-ui-core-4.0.0.md
+++ b/_posts/2024-12-04-ui-core-4.0.0.md
@@ -3,7 +3,7 @@ title: UI.Core 4.0.0
 type: major
 ---
 
-Major release of Taf.Core library
+Major release of UI.Core library with support of TAF v4 and bugfixes
 
 **Features:**
 
