fixed typos, added info about LoadingHandler and taf.core 4.1.0 release

--- a/_posts/2024-12-04-ui-web-4.1.0.md
+++ b/_posts/2024-12-04-ui-web-4.1.0.md
@@ -3,7 +3,7 @@ title: UI.Web 4.1.0
 type: major
 ---
 
-Major release of UI.Web library with support of Taf v4
+Major release of UI.Web library with support of TAF v4
 
 **Features:**
 
