--- a/_posts/2024-12-08-ui-win-4.0.0.md
+++ b/_posts/2024-12-08-ui-win-4.0.0.md
@@ -3,7 +3,7 @@ title: UI.Win 4.0.0
 type: major
 ---
 
-Major release of UI.Win library with support of Taf v4
+Major release of UI.Win library with support of TAF v4
 
 **Features:**
 
@@ -16,4 +16,4 @@ Major release of UI.Win library with support of Taf v4
 
 * **[BREAKING]** Fixed typo in `WebScreenshotTaker.ScribeToTafEvents`
     * Also reused base code from `ScreenshotTakerBase`
-* Fixed not wortking screenshotter for .net
+* Fixed not working screenshotter for .net
