--- a/_posts/2024-12-04-backend-3.0.0.md
+++ b/_posts/2024-12-04-backend-3.0.0.md
@@ -3,7 +3,7 @@ title: Backend 3.0.0
 type: major
 ---
 
-Major release of Backend library with support of Taf v4 and retargeted to netstandard 2.0
+Major release of Backend library with support of TAF v4 and retargeted to netstandard 2.0
 
 **Features:**
 
